# maddev

./: README.md  msg_split.py  pyproject.toml  requirements.txt  source_my.html  split_msg.py  test_msg_split.py
services/: msg_split.py
sources/: source_my.html  source_no_tags.html
tests/: test_msg_split.py
