[tool.poetry]
name = "maddev"
version = "0.1.0"
description = ""
authors = ["Dmitrii Barilkin <dimabaril@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
types-beautifulsoup4 = "^4.12.0.20241020"
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
